# dotfiles

./: .gitignore  PKGBUILD  README.md  cargo-env.sh  cd.fish  config.fish  config.nu  config.toml  dconf.ini  doas.conf  dotfiles.install  dwl.desktop  env.nu  find  foot.ini  greetd-config.toml  gtk-3.0-settings.ini  helix-config.toml  index.theme  link-dotfiles  meson.build  mpv.conf  myprofile.sh  paru.conf  raw-shell.desktop  s6-db-reload-user  shell.desktop  spawn-shell  tofi-config  user-overrides.js  wireplumber.conf  wsetup  wsetup.sh
chrome/: userChrome.css
chrome/includes/: cascade-colours.css
chrome/integrations/tabcenter-reborn/: tabcenter-reborn.css
dconf/: dotfiles.dwl.gschema.xml  dotfiles.somebar.gschema.xml
helix/: config.toml  languages.toml
helix/themes/: mine.toml
pipewire/: pipewire-pulse.conf  pipewire.conf
s6/: start-services.sh
s6-user/: finish  start-default  start-services.sh  start-tty
s6-user/sv/cosmic-osd-log/: consumer-for  pipeline-name  run
s6-user/sv/cosmic-osd-srv/: producer-for  run
s6-user/sv/dbus-log/: run
s6-user/sv/dbus-srv/: run
s6-user/sv/dconf-log/: consumer-for  run
s6-user/sv/dconf-srv/: producer-for  run
s6-user/sv/dwl-log/: consumer-for  run
s6-user/sv/dwl-srv/: producer-for  run
s6-user/sv/foot-log/: run
s6-user/sv/gvfsd-log/: consumer-for  run
s6-user/sv/gvfsd-srv/: run
s6-user/sv/mate-polkit-log/: consumer-for  run
s6-user/sv/mate-polkit-srv/: run
s6-user/sv/pipewire-log/: consumer-for  run
s6-user/sv/pipewire-media-session-srv/: run
s6-user/sv/pipewire-pulse-log/: run
s6-user/sv/polkit-gnome-log/: consumer-for  run
s6-user/sv/polkit-gnome-srv/: producer-for  run
s6-user/sv/psd-log/: run  (+1 more)
subprojects/: libliftoff.wrap  tree-sitter.wrap  wlroots.wrap
subprojects/cat_sock/: meson.build
subprojects/dwl/: .gitignore  config.def.h  config.h  depends  dwl.c  log  meson.build  meson_options.txt
subprojects/dwl/protocols/: meson.build  net-tapesoftware-dwl-wm-unstable-v1.xml
subprojects/dwl/tree-sitter-dconfdwl/: Cargo.toml  Makefile  Package.swift  binding.gyp  grammar.js  meson.build  package.json  pyproject.toml  setup.py
subprojects/dwl/tree-sitter-dconfdwl/bindings/c/: tree-sitter-dconfdwl.h  tree-sitter-dconfdwl.pc.in
subprojects/dwl/tree-sitter-dconfdwl/bindings/go/: binding.go  binding_test.go  go.mod
subprojects/dwl/tree-sitter-dconfdwl/bindings/node/: binding.cc  index.js
subprojects/dwl/tree-sitter-dconfdwl/bindings/python/tree_sitter_dconfdwl/: __init__.py  binding.c
subprojects/dwl/tree-sitter-dconfdwl/bindings/rust/: build.rs  lib.rs
subprojects/dwl/tree-sitter-dconfdwl/src/: grammar.json  node-types.json  parser.c
subprojects/isdirempty/: Cargo.toml  isdirempty.c  meson.build
subprojects/libliftoff/: .meson-subproject-wrap-hash.txt
subprojects/rust-workspace/: Cargo.toml  dconf  meson.build
subprojects/rust-workspace/calloop-dbus/: CHANGELOG.md  Cargo.toml  LICENSE  README.md  deny.toml
subprojects/rust-workspace/calloop-dbus/src/: filters.rs  lib.rs
subprojects/rust-workspace/chromiumpsd/: Cargo.toml
subprojects/rust-workspace/chromiumpsd/src/: main.rs
subprojects/rust-workspace/color/: Cargo.toml
subprojects/rust-workspace/color/src/: lib.rs
subprojects/rust-workspace/cosmic-osd/: Cargo.toml
subprojects/rust-workspace/cosmic-osd/src/components/: app.rs  polkit_dialog.rs
subprojects/rust-workspace/cosmic-osd/src/subscriptions/: dbus.rs  polkit_agent.rs  polkit_agent_helper.rs
subprojects/rust-workspace/dbus-dwl/: Cargo.toml  build.rs
subprojects/rust-workspace/dbus-dwl/src/: dconf.rs  lib.rs
subprojects/rust-workspace/dconf-sys/: Cargo.toml  build.rs  wrapper.h
subprojects/rust-workspace/listenbrainz-mpv/: Cargo.toml
subprojects/rust-workspace/listenbrainz-mpv/src/: lib.rs
subprojects/rust-workspace/rustbar/: Cargo.toml  build.rs
subprojects/rust-workspace/rustbar/src/: dconf.rs  fuzzy_match.rs  i3-main.rs  lib.rs  logind.rs  main.rs  push_str.rs  tags.rs  upower.rs  wireplumber.rs  wrapper.cpp  wrapper.h
subprojects/rust-workspace/rustbar/src/clipboard/: mod.rs  state.rs
subprojects/rust-workspace/rustbar/src/components/: battery.rs  brightness.rs  connman.rs  mod.rs  playback.rs  time.rs  wireplumber.rs
subprojects/rust-workspace/s6-manager/: Cargo.toml
subprojects/rust-workspace/s6-manager/src/: logind.rs  main.rs
subprojects/rust-workspace/tree-sitter-dconfsomebar/: Cargo.toml  Makefile  Package.swift  binding.gyp  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py
subprojects/rust-workspace/tree-sitter-dconfsomebar/bindings/c/: tree-sitter-dconfsomebar.pc.in
subprojects/rust-workspace/tree-sitter-dconfsomebar/bindings/go/: binding.go  binding_test.go  go.mod
subprojects/rust-workspace/tree-sitter-dconfsomebar/bindings/node/: binding.cc  index.js
subprojects/rust-workspace/tree-sitter-dconfsomebar/bindings/python/tree_sitter_dconfsomebar/: __init__.py  binding.c
subprojects/rust-workspace/tree-sitter-dconfsomebar/bindings/rust/: build.rs  lib.rs
subprojects/rust-workspace/tree-sitter-dconfsomebar/bindings/swift/TreeSitterDconfsomebar/: dconfsomebar.h
subprojects/rust-workspace/tree-sitter-dconfsomebar/src/: grammar.json  node-types.json  parser.c
subprojects/rust-workspace/tuigreet/: Cargo.toml
subprojects/rust-workspace/tuigreet/src/: ipc.rs  keyboard.rs
subprojects/rust-workspace/tuigreet/src/ui/: mod.rs  power.rs
subprojects/rustbar/: Cargo.toml
subprojects/somebar/: .gitignore  Makefile  meson.build
subprojects/somebar/protocols/: net-tapesoftware-dwl-wm-unstable-v1.xml  wlr-layer-shell-unstable-v1.xml
subprojects/somebar/src/: bar.cpp  bar.hpp  common.hpp  config.def.hpp  main.cpp
subprojects/somebar/subprojects/rustbar/: Cargo.toml  meson.build
subprojects/somebar/subprojects/rustbar/src/: bluez.rs  lib.rs  main.rs  mpris.rs  table.txt
subprojects/wlroots/: .meson-subproject-wrap-hash.txt
subprojects/wpmonitor/: api.xml  meson.build  wpmonitor.c
tuigreet/: Cargo.toml  makemake  sh
tuigreet/src/: greeter.rs  keyboard.rs  main.rs  power.rs
(+75 files in other folders)
