[workspace]
resolver = "2"
members = [
  "listenbrainz-mpv",
  "rustbar",
  "tuigreet",
  "dconf-sys",
  "calloop-dbus",
  "dbus-dwl",
  "chromiumpsd",
  "color",
]

[profile.release]
lto = true
strip = true
codegen-units = 1
panic = "abort"

[profile.dev]
incremental = false
overflow-checks = false
panic = "abort"

[profile.dev.package."*"]
opt-level = 3


