[package]
name = "dbus-dwl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib"]

[dependencies]
color = { version = "0.1.0", path = "../color" }
cssparser = "0.33.0"
dbus = "0.9.7"
palette = { version = "0.7.3", default-features = false, features = ["std"] }
tree-sitter = ">=0.22.2"

