[package]
name = "listenbrainz-mpv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
id3 = "1.6.0"
libmpv = { git = "https://github.com/StratusFearMe21/libmpv-rs", version = "2.0.1", default-features = false }
libmpv-sys = { git = "https://github.com/StratusFearMe21/libmpv-rs", version = "3.1.0", default-features = false }
memchr = "2.5.0"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.105"
ureq = { version = "2.6.2", features = ["json", "tls"], default-features = false }

[target.x86_64-unknown-linux-gnu.dependencies]
dirs = "5.0.0"

[features]
default = ["only-scrobble-if-mbid"]
only-scrobble-if-mbid = []
