[package]
name = "listenbrainz-mpv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
flume = { version = "0.11.0", default-features = false }
id3 = { git = "https://github.com/StratusFearMe21/rust-id3", branch = "patch-1" }
libmpv = { git = "https://github.com/StratusFearMe21/libmpv-rs", version = "2.0.1", default-features = false }
libmpv-sys = { git = "https://github.com/StratusFearMe21/libmpv-rs", version = "3.1.0", default-features = false }
memchr = "2.5.0"
regex = "1.10.2"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.105"
smart-default = "0.7.1"
ureq = { version = "2.6.2", features = ["json", "tls"], default-features = false }
yoke = { version = "0.7.3", features = ["derive"] }

[target.x86_64-unknown-linux-gnu.dependencies]
dirs = "5.0.0"

[features]
default = ["only-scrobble-if-mbid"]
only-scrobble-if-mbid = []
