[package]
name = "rustbar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rustbar"
crate-type = ["staticlib", "rlib"]

[[bin]]
name = "rustbar"
path = "src/main.rs"

[dependencies]
calloop = "0.10.5"
calloop-dbus = { git = "https://github.com/StratusFearMe21/calloop-dbus", version = "0.1.1" }
dbus = "0.9.7"
dirs = "4.0.0"
nix = { version = "0.26.2", default-features = false, features = ["inotify"] }
num_enum = "0.5.11"
time = { version = "0.3.20", features = ["local-offset", "formatting"] }
tz-rs = "0.6.14"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[features]
i3bar = []
